@@ -286,5 +286,6 @@ v1.5.4
  * bugfix: vi :w didn't work with filenames longer than 6 characters
  * bugfix: vi :w! captured control characters in filename
  * bugfix: changed vi :w to avoid 1541 bugs
- * vi: after saving, press key to dismiss drive status message
+ * vi: improved feedback when saving
+ * vi: stop using backup files
  * forth: added require, required
